maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:40: error: recursive method ecrit needs result type
		case 1 => ecrit(x, y-1, i+1);
                          ^JediEscaper:10: error: type mismatch;
 found   : Unit
 required: (Int, Int)
	while(!aBiscuit(x, y)) {
        ^